# printha

./: CMakeLists.txt  LICENSE  README.md
demo/: addressbook.csv  addressbook2.csv  csvoid.txt  csvparser.py  demo1.sh  demo2.sh  demo3.sh  demo4.sh  nenga.txt
demo/1/: sendto.ps
gui/: application.ini  chrome.manifest
gui/chrome/content/: printha.js  printha.xul
gui/chrome/skin/: printha.css
gui/defaults/preferences/: prefs.js
gui/modules/: csvparser.js
resources/OCRB_aizu_1_1/: OCRB_aizu_1_1.sfd  SIL_Open_Font _License_1_1.txt
settings/: config.company.txt  config.telephone.txt  config.txt  sendfrom.txt  sendto.txt
src/: printha.cpp  printha.gui.in  printha.h  printha_init.cpp  printha_settings.cpp  scrap.cpp  uninstall.sh.in
